--- a/Sociedad.html
+++ b/Sociedad.html
@@ -82,71 +82,66 @@
                         </div>
                         <div class="tema2">
                             <p> 
-                                El momento tan esperado llegó y millones de personas en varios países de Sudamérica (Argentina, Chile, Uruguay, Paraguay, brazil y bolivia) pudieron disfrutar en vivo el eclipse solar 2020, un evento astronómico único donde la Luna arroja una sombra en la Tierra, bloqueando completa o parcialmente la luz del Sol en algunas áreas.
-                                Esta alineación exacta de los tres cuerpos en el espacio, que conjugan en un mismo punto, comenzó a las 11:45 en el océano Pacífico y terminó cuando la Luna descubrió totalmente al Sol, alrededor de las 14:45 horas en el océano Atlántico a 200 kilómetros de la costa de Sudáfrica.
-                                Pero el gran momento en el que se lo pudo ver en forma total, con la posibilidad única de observar la corona solar en su esplendor, fue a partir de las 13Hs Arg.
+                               Este lunes, poco después del mediodía, ocurrió un evento astronómico espectacular: un eclipse solar total que se dio en una franja de 90 kilómetros de ancho, que cruzó de oeste a este la Patagonia chilena y argentina. En el resto del territorio de esos países pudo verse de forma parcial, al igual que en Uruguay, Paraguay, Bolivia, Brasil, Perú y Ecuador.
+                               <br> <br>En un eclipse se produce la alineación de tres objetos: uno donde está el observador (en nuestro caso, la Tierra), otro que está al fondo (siguiendo la línea de la visual del observador) y otro que pasa por el medio. En el eclipse de Luna, la Tierra es el objeto que pasa por el medio y le hace sombra a la Luna. En el caso del eclipse solar, es la Luna la que se interpone entre la Tierra y el Sol, proyecta su sombra y, desde nuestra perspectiva, parece como si lo estuviera tapando.
+                               <br> <br>Los que pudieron viajaron para verlo. Los que no, lo siguieron desde plazas y terrazas con la ayuda de proyectores caseros. Y como el límite de la creatividad es el cielo, hasta hubo quienes lo proyectaron con galletitas de agua.
                             </p>
                         </div>
                     </div>
-                    <div class="img segunda">
-                        <img src="/img/tecnologia2.jpg" alt="tecnologia"><br>
-                        <div class="pie-de-foto1">El 5G permite un mayor soporte para masificar el uso de vehículos autónomos, telemedicina, la industria 4.0 y el desarrollo de ciudades inteligentes.</div>
-                        <div class="pie-de-foto2"> <strong>Foto: Cortesía Tigo</strong></div>
+
+                    <h3 class="titulo-temas">¿Y A MI DE QUE ME SIRVE?</h3>
+                    <div class="comoocurre">
+                        <div class="tema2">
+                            <p> 
+                              Más allá del espectáculo visual, los eclipses son eventos que los científicos aprovechan para estudiar aspectos de la atmósfera del Sol y chequear sus cálculos, ya que al llegar menos intensidad de luz, es más sencillo observar ciertas regiones. También hay otro tipo de eclipses, llamados tránsitos planetarios, que es cuando vemos pasar el disco de un planeta (en nuestro caso eso puede suceder con Mercurio o Venus) por delante del disco del Sol.
+                              <br> <br>“Si bien la relación de tamaños hace que el disco del planeta sea muchísimo más chico y no llegue a tapar el sol, se aprovechan esos eventos para hacer mediciones. También se usa esa técnica para detectar planetas extrasolares: al observar la desviación de la luz, se puede analizar su atmósfera”, cuenta la astrónoma. Otro aspecto interesante para estudiar durante los eclipses es el comportamiento de los animales, especialmente en las franjas donde el eclipse es total. Al haber un descenso brusco de luz y temperatura, los animales pueden quedar desorientados.
+                            </p>
+                        </div>
+                        <div class="tema1">
+                            <div class="eclipseimg">
+                                <img src="img/noticia_eclipse.png" alt="eclipse imagen"><br>
+                            </div>
+                        </div>
                     </div>
-                    <p>
-                        Las redes 5G son reconocidas por una velocidad mucho más alta que la de su predecesora, al tiempo que cuentan con una menor latencia, que es el tiempo de respuesta entre las comunicaciones. Expertos describen que permite más cantidad de dispositivos conectados a internet, sin que afecte la calidad.
 
-                        “El 5G es como un tubo en donde se hace la transferencia de datos e información. Cada generación hace que ese tubo sea más grande, pero en comparación con la red 4G, que es la que usamos ahora y nos permite gran número de conexiones, la 5G es 20 veces más grande”, señala Ricardo Anaya, product manager de Qualcomm para América Latina.
+                    <h3 class="titulo-temas">BRILLA LA ESTRELLA DE LA PAZ</h3>
+                    <div class="comoocurre">
 
-                        Esto puede permitirle al país soñar con un mayor soporte para masificar el uso de vehículos autónomos, telemedicina, la industria 4.0 y el desarrollo de ciudades inteligentes, entre otros.
-                    </p>
-                    <p>Por eso, el despliegue de planes piloto representa la primera parte del camino para que esta tecnología sea una realidad en un futuro en el territorio colombiano. <strong> El Ministerio de las TIC aseguró que los permisos otorgados van hasta junio del próximo año.</strong><br>
-
-                    Con los resultados obtenidos se generará un banco de pruebas, el cual, indica el Mintic, “permitirá obtener la información necesaria que facilite el diseño de estrategias y normas que garanticen la adecuada asignación, seguridad jurídica y de las inversiones para los próximos procesos de selección objetiva”.
-                    </p>
-                        <h3>Planes en ejecución</h3>
-                        <p>El punto de partida fue el plan liderado por Movistar en Bogotá, el cual ha sido probado en más de 400.000 personas, señaló Fabián Hernández, CEO de Telefónica en el país. <br>
-                            <strong>“El piloto nos permite entender cómo debe ser el despliegue de esta nueva infraestructura. Lo importante es entender todas las aplicaciones que puede llegar a ofrecer y sus diferentes soluciones, ya sea para una empresa, un puerto o un hospital”, indicó Hernández.</strong>
-                        </p>
-                        <p>Por otro lado, Tigo desplegó junto con Nokia a principios de diciembre otro proyecto en la Ruta N, en Medellín, en el cual se pudo realizar una prueba simultánea con siete casos de uso en un solo lugar.</p>
-                        <p> <strong>"En comparación con la red 4G, que es la que usamos ahora y nos permite gran número de conexiones, la 5G es 20 veces más grande</strong> "</p>
-                        <p>Entre ellos la ultra banda ancha móvil, acceso fijo inalámbrico, carros a escala conectados a redes 5G, robots colaborativos para la industria 4.0, realidad virtual de 360°, iluminación inteligente y video analítica para la prevención de covid-19.
-                            <br>
-                            “Estos planes nos permiten desde el lado técnico mirar las capacidades tecnológicas para soportar una evolución de la red. Además, fortalece el ecosistema desarrollador e innovador del país para que empecemos a pensar qué otras cosas podemos hacer contando con el soporte de la red 5G”, indicó Marcelo Cataldo, presidente de Tigo. 
-                            <br>
-                            Claro también ha estado enfocada en explorar el 5G. Actualmente cuenta con pilotos en Bogotá, Medellín, Cali y Barrancabermeja, centrados en banda ancha mejorada, acceso fijo inalámbrico y aulas de educación virtual.
-                            <br>
-                            Durante su despliegue, señaló el operador, se han alcanzado, en el caso de Bogotá, velocidades de más de 1 gigabit por segundo, lo que puede permitir descargar un video de alta definición de hasta 950 MB en ocho segundos.
-                            <br>
-                            “Es el paso inicial para estructurar, probar, identificar e incentivar nuevas soluciones y usos de esta tecnología, adaptadas a nuestras necesidades y que permitan seguir construyendo el camino para que estemos a la vanguardia”, señaló Carlos Zenteno, presidente de Claro Colombia.
-                            <br>
-                            Pese a todo esto, para que Colombia cuente con un despliegue amplio de esta red falta tiempo. Hasta el momento, el Mintic no ha puesto una fecha para una posible subasta del espectro 5G.
-                            <br>
-                            Aun así, en octubre pasado, el alto consejero presidencial para la Transformación Digital, Víctor Muñoz, mencionó la posibilidad de que para finales del 2021 se pueda considerar realizar una subasta, para que estas redes estén en funcionamiento para finales de 2022 y principios de 2023.
-                        </p>
-                </article>
+                        <div class="tema1">
+                            <div class="eclipseimg">
+                                <img src="img/anteojo.jpg" alt="eclipse imagen"><br>
+                            </div>
+                        </div>
+                        <div class="tema2">
+                            <p> 
+                              Como si el eclipse no hubiera sido suficiente, en estos días el cielo también nos regalará la “estrella de Belén”. Se trata de un evento astronómico donde, desde nuestra perspectiva, pareciera que Júpiter y Saturno se superponen. Lo que se ve, entonces, es como si ambos planetas fueran una estrella muy brillante. La última vez que se pudo ver de esta manera fue hace 800 años. Estos planetas realizan un movimiento particular en sus órbitas, como si trazaran una S en el cielo. Por eso, teniendo en cuenta que la Tierra también va cambiando de lugar en su órbita, pasa tanto tiempo para volver a tener la misma configuración.
+                              <br> <br>“Se dice que esa conjunción puede ser la que inspiró la estrella de Belén. Hace un tiempo, hice una búsqueda de posibles fenómenos que podrían haber coincidido con esa historia y traté de reproducirlos con un software, teniendo en cuenta aspectos como la resolución que tenemos en la vista y la distancia entre estos dos planetas en ese momento, pero los cálculos no daban para que hayan estado tan cerca. Aunque también hay que tener en cuenta que los calendarios y la forma de construir el tiempo fueron cambiando”, señala Álvarez.
+                            </p>
+                        </div>
+                    </div>
+            </article>
             </section>
             <div class="contenedor-mas-noticias">
-                <h3>Descubre más noticias</h3>
+                <h3 class="titulo-temas">VIDEOS QUE TE PUEDEN INTERESAR</h3>
                 <div class="mas-noticias">
                     <div class="noticia noticia1">
-                        <img src="/img/google.jpg" alt="google">
-                        <a href="#"><span>Los servicios de Google ya están de vuelta</span></a>
+                        <iframe width="350" height="300" src="https://www.youtube.com/embed/mDhRjsNoB7Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="noticia noticia2">
-                        <img src="/img/tutorial_tecnologia.jpg" alt="Tutorial_tecnología">
-                        <a href="#"><span>Claves para no caer en una estafa virtual en esta Navidad</span></a>
+                        <iframe width="350" height="300" src="https://www.youtube.com/embed/mRjwUCUj5mk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     
                     <div class="noticia noticia3">
-                        <img src="/img/google2.jpg" alt="google">
-                         <a href="#"><span>YouTube, Gmail y otros servicios de Google sufren una caída mundial</span></a> 
+                        <iframe width="350" height="300" src="https://www.youtube.com/embed/Z-DwHOJu_So" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
-                    <h3>Te puede Interesar</h3>
+
+
+
+                    <h3 class="titulo-temas">relacionado con esta noticia</h3>
                     <div class="video-aside">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/cKeJNQACXbg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/sSDvqeyy7O8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/1MSFgiDqHsc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/N9QKPMfm2BY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="opinion">
                         <p>¿Qué te pareció el artículo?</p>
