recreacion.html, este si, ahora si, LA DEFINITIVA

--- a/Recreacion.html
+++ b/Recreacion.html
@@ -80,13 +80,12 @@
                         <h5>POLÉMICA<span>DIC 09</span></h5>
                         <a href="#">Deporte o recreación ¿Qué ventajas tiene una sobre la otra?</a>
                     </div>
-                  
-                    <div class="img_segunda" >
-                        <br><br>
-                        <img src="img/recreacion2.jpg" alt="recreacion" width="600px">
-                        <div class="pie-de-foto1"> El componente social en la recreación puede ayudar a las personas a exteriorizar su personalidad</div>
-                        <div class="pie-de-foto2"> Fotografía: Google images</div>
-                    </div>
+                </div>
+
+                <div class="img segunda" >
+                    <img src="img/recreacion2.jpg" alt="recreacion" width="600px">
+                    <div class="pie-de-foto1"> El componente social en la recreación puede ayudar a las personas a exteriorizar su personalidad</div><br>
+                    <div class="pie-de-foto2"> <strong>Fotografía: Google images</strong></div>
                 </div>
                 
                 <p>Jugar en el exterior ayuda a los más pequeños a mejorar sus habilidades sociales, ya que al estar en contacto con otros niños deben aprender a relacionarse, compartir, negociar y, en definitiva, a interactuar con los demás. En este sentido, jugar con otros niños también implica la necesidad de desarrollar las habilidades de liderazgo y cooperación, entre ellas, aprender a dirigir pero también a ceder, algo que será muy valioso para el futuro.
