--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             </section>
             <section class="hijo2">
                 <article>
+                    <h2 class="titulo-noticia">Aspectos a tener en cuenta para las actividades recreativas</h2>
                     <img src="img/recreacion1.jpg" width="475px" alt="">
                     <p>Con una actualidad tan desbordante en muchos aspectos de la vida, es muy normal el sentirnos estresados y superados
                         por determinadas situaciones, muchas veces el estrés que nos genera la vida laboral, el presente sin precedentes ocasionado
