--- a/Deportes.html
+++ b/Deportes.html
@@ -26,7 +26,10 @@
                 <ul>
                     <li> 
                         <div class="busqueda">
-                            <input type="text" name="Buscar" placeholder="Buscar_______________&#xf002; "class="src" autocomplete="off">
+                            <input type="text" name="Buscar" placeholder="Buscar..."class="src" autocomplete="off">
+                            <div class="lupa">
+                                <a href="#"><i class="fas fa-search"></i></a>
+                            </div>
                         </div>
                     </li>
                     <li> <a href="Deportes.html"><span>Deportes</span></a> </li> 
@@ -55,7 +58,7 @@
                 <p class="subtitulo">La revista France Football, que entrega el Balón de Oro, armó el equipo de todos los tiempos y Diego y Leo están presentes, como no podía ser de otra manera. Mirá.<p>
                 <article class="noticia-tecnologia">
                     <div class="imagen">
-                        <img src="/img/deportes.jpg"alt="11ideales">
+                        <img src="/img/DEEEEEEEPORRTEESSSSS.jpg"alt="11ideales" width="1120px">
                     </div>
                     <h4><span>France Football.</span></h4>
                     <p>
