se agregan las imagenes de arte en el documento arte

--- a/Arte.html
+++ b/Arte.html
@@ -54,90 +54,145 @@
         <main>
             <section  class="noticias">
                 <h1>5 ARTISTAS HIPERREALISTAS Que Te Dejarán Impactado.</h1>
-                <p class="subtitulo">¡Parece una foto!, ¡Es imposible que alguien pueda dibujar así!, ¡Se le ven hasta los poros de la piel! ¿No has pensado eso al ver algunos dibujos hiperrealistas?<p>
+                <p class="subtitulo">¡Parece una foto!, ¡Es imposible que alguien pueda dibujar así!, ¡Se le ven hasta los 
+                    poros de la piel! ¿No has pensado eso al ver algunos dibujos hiperrealistas?<p>
                 <article class="noticia-arte">
                     <div class="imagen">
-                        <img src="img/imagen-arte-1.jpg"alt="hiperrealismo">
+                        <img src="img/imagen-arte-1.jpg"alt="hiperrealismo" width="600PX" height="">
+                        <div class="pie-de-foto2"> <strong>Foto: Cortesía Dirk Dzimirsky</strong></div>
+                        <div class="pie-de-foto1">“He escogido dibujar en vez de pintar ya que me permite crear capas sobre capas<br> 
+                            de líneas y puntos que reaccionan unos con otros para crear una textura vibrante"
+                        </div>
                     </div>
-                      <h4>Por: Juan <span>20 octubre, 2020 </span></h4>
-                    <p>
-                        Te voy a enseñar aquí a los 5 mejores artistas hiperrealistas del momento, con una selección de sus mejores dibujos y videos donde los vamos a ver en plena acción.
-                        Como dirían en un concierto… ¡Con todos ustedes: Dzimirsky, Dascanio, Cadden, Facio y Okafor! ¡Que comience el espectáculo y prepara tus ojos para ver algo asombroso!
+                      <p>
+                        <strong> Dzimirsky, el hiperrealismo que sobrecoge.</strong><br> 
+                        He pasado horas y horas viendo sus dibujos, sus videos y pensando en cómo con un lápiz alguien podía dibujar
+                        algo tan realista y producirme esas sensaciones. 
+                        Sus dibujos me hablan y me quieren contar algo. <br>
+                        A mi me producen sobrecogimiento, me transmiten como una especie de angustia o pena que no sé explicar y que sólo 
+                        él me provoca entre todos los artistas hiperrealistas que he conocido.<br>
+                        <strong> Artista hiperrealista es un autodidacta</strong> del dibujo y con trabajo, pasión y constancia ha logrado 
+                        ser una referencia del hiperrealismo.<br> 
+                        En 2005 decidió dedicarse profesionalmente al dibujo y la ilustración.<br> 
+                        Tiene una técnica impresionante y muy personal en la que destacan sus fondos difuminados y centra
+                        el foco de atención en narices, ojos y bocas.<br>
                     </p>
-                    <h3 class="titulo-temas">Temas relacionados</h3>
+                    <h3 class="titulo-temas">Más Hiperrealismo</h3>
                     <div class="temas-relacionados">
                         <div class="tema1">
-                            <h5>leonardo davinci <span>DIC 12</span></h5>
-                            <a href="#">da-vinci-nunca-pinto-su-fresco-mas-buscado-la-batalla-de-anghiari-542079</a>
+                            <h5>LEONARDO DAVINCI <span>DIC 12</span></h5>
+                            <a href="#">da vinci nunca pinto su fresco mas buscado la batalla de anghiari 542079</a>
                     <div class="tema2">
-                            <h5>5G<span>DIC 07</span></h5>
-                            <a href="#">Europa ya piensa en redes 6G y empieza proyecto</a>
+                            <h5>JOE BIDEN<span>DIC 12</span></h5>
+                            <a href="#">Expondran los cuadros del hijo del presidente electo de EE.UU</a>
                         </div>
                         <div class="tema3">
-                            <h5>5G <span>DIC 07</span></h5>
-                            <a href="#">Estas son las tecnologías que ya se están probando con 5G en Colombia</a>
+                            <h5>ARTE <span>DIC 14</span></h5>
+                            <a href="#">Artistas populares participan en Expoartesanias 2020</a>
                         </div>
                     </div>
                     <div class="img segunda" >
-                        <img src="img/tecnologia2.jpg" alt="tecnologia" width="600px"><br>
-                        <div class="pie-de-foto1">El 5G permite un mayor soporte para masificar el uso de vehículos autónomos, telemedicina, la industria 4.0 y el desarrollo de ciudades inteligentes.</div>
-                        <div class="pie-de-foto2"> <strong>Foto: Cortesía Tigo</strong></div>
+                        <img src="img/imagen-arte-2.jpg" alt="hiperrealismo" width="400px" height=""><br>
+                        <img src="img/imagen-arte-3.jpg" alt="hiperrealismo" width="400px" height=""><br>
+                        <div class="pie-de-foto2"> <strong>Foto: Cortesía Emanuele Dascanio</strong></div>
+                        <div class="pie-de-foto1">hace unos retratos inspiradores y de gran belleza,<br> nota mucho en él 
+                            el peso de la tradición pictórica italiana.
+                        </div>
+                        
                     </div>
                     <p>
-                        Las redes 5G son reconocidas por una velocidad mucho más alta que la de su predecesora, al tiempo que cuentan con una menor latencia, que es el tiempo de respuesta entre las comunicaciones. Expertos describen que permite más cantidad de dispositivos conectados a internet, sin que afecte la calidad.
-
-                        “El 5G es como un tubo en donde se hace la transferencia de datos e información. Cada generación hace que ese tubo sea más grande, pero en comparación con la red 4G, que es la que usamos ahora y nos permite gran número de conexiones, la 5G es 20 veces más grande”, señala Ricardo Anaya, product manager de Qualcomm para América Latina.
-
-                        Esto puede permitirle al país soñar con un mayor soporte para masificar el uso de vehículos autónomos, telemedicina, la industria 4.0 y el desarrollo de ciudades inteligentes, entre otros.
+                        <strong> Dascanio, la belleza de los hiperrealistas italianos</strong><br>
+                        ¿Qué te ha parecido el video?, ¿Es increíble verdad? <strong> Emanuele Dascanio </strong> 
+                        hace unos retratos inspiradores y de gran belleza, se nota mucho en él<strong> el peso de la 
+                        tradición pictórica italiana.</strong><br>
+                        Es un gran apasionado de los artistas clásicos y<strong> su gran referente es Leonardo Da Vinci</strong> 
+                        cuya influencia se observa en la delicadeza con la que trata la imagen.
+                        de las luces y las sombras.<br>
+                        Sus dibujos se caracterizan por unos claroscuros muy marcados, donde<strong> 
+                        las luces y las sombras resaltan muchísimo</strong>
+                        Dascanio usa con maestría  la<strong> técnica del Tratteggio</strong> que consiste en aplicar 
+                        el lápiz mediante finas líneas aplicadas por capas que van oscureciendo las zonas en sombra
                     </p>
-                    <p>Por eso, el despliegue de planes piloto representa la primera parte del camino para que esta tecnología sea una realidad en un futuro en el territorio colombiano. <strong> El Ministerio de las TIC aseguró que los permisos otorgados van hasta junio del próximo año.</strong><br>
-
-                    Con los resultados obtenidos se generará un banco de pruebas, el cual, indica el Mintic, “permitirá obtener la información necesaria que facilite el diseño de estrategias y normas que garanticen la adecuada asignación, seguridad jurídica y de las inversiones para los próximos procesos de selección objetiva”.
+                    <div class="img cuarta" >
+                        <img src="img/imagen-arte-4.jpg" alt="hiperrealismo" width="" height=""><br>
+                        <div class="pie-de-foto2"> <strong>Foto: Cortesía Paul Cadden</strong></div>
+                        <div class="pie-de-foto1">dibujos que parecen fotografías.</div>
+                    </div>
+                    <p>
+                        Hablar de<strong> Paul Cadden es hablar de hiperrealismo fotográfico,</strong> es extremadamente minucioso 
+                        a la hora de representar la realidad y a diferencia de los anteriores no sólo se dedica a 
+                        los retratos.<br>
+                        <strong> También realiza obras partiendo de paisajes y escenas urbanas que fotografía 
+                        previamente,</strong> al igual que sus retratos, durante sus viajes alrededor del mundo.<br>
+                        No estudió Bellas Artes ni nada relacionado con ningún medio artístico.
+                        <strong> “Todo lo que sé lo he aprendido acumulando experiencia y leyendo algunos manuales de dibujo.”</strong>
+                        Una muestra más de que la práctica hace al maestro.<br>
+                        Hiperrealismo social
+                        Te voy a decir la mayor diferencia que encuentro con los anteriores. 
+                        Sus  <strong> dibujos  son más informativos, retratan la vida urbana, la sociedad en la que vivimos.</strong><br>
+                        Si tuviera que describirlo diría que es el<strong> “periodista” entre los artistas hiperrealistas.</strong>
                     </p>
-                        <h3>Planes en ejecución</h3>
-                        <p>El punto de partida fue el plan liderado por Movistar en Bogotá, el cual ha sido probado en más de 400.000 personas, señaló Fabián Hernández, CEO de Telefónica en el país. <br>
-                            <strong>“El piloto nos permite entender cómo debe ser el despliegue de esta nueva infraestructura. Lo importante es entender todas las aplicaciones que puede llegar a ofrecer y sus diferentes soluciones, ya sea para una empresa, un puerto o un hospital”, indicó Hernández.</strong>
-                        </p>
-                        <p>Por otro lado, Tigo desplegó junto con Nokia a principios de diciembre otro proyecto en la Ruta N, en Medellín, en el cual se pudo realizar una prueba simultánea con siete casos de uso en un solo lugar.</p>
-                        <p> <strong>"En comparación con la red 4G, que es la que usamos ahora y nos permite gran número de conexiones, la 5G es 20 veces más grande</strong> "</p>
-                        <p>Entre ellos la ultra banda ancha móvil, acceso fijo inalámbrico, carros a escala conectados a redes 5G, robots colaborativos para la industria 4.0, realidad virtual de 360°, iluminación inteligente y video analítica para la prevención de covid-19.
-                            <br>
-                            “Estos planes nos permiten desde el lado técnico mirar las capacidades tecnológicas para soportar una evolución de la red. Además, fortalece el ecosistema desarrollador e innovador del país para que empecemos a pensar qué otras cosas podemos hacer contando con el soporte de la red 5G”, indicó Marcelo Cataldo, presidente de Tigo. 
-                            <br>
-                            Claro también ha estado enfocada en explorar el 5G. Actualmente cuenta con pilotos en Bogotá, Medellín, Cali y Barrancabermeja, centrados en banda ancha mejorada, acceso fijo inalámbrico y aulas de educación virtual.
-                            <br>
-                            Durante su despliegue, señaló el operador, se han alcanzado, en el caso de Bogotá, velocidades de más de 1 gigabit por segundo, lo que puede permitir descargar un video de alta definición de hasta 950 MB en ocho segundos.
-                            <br>
-                            “Es el paso inicial para estructurar, probar, identificar e incentivar nuevas soluciones y usos de esta tecnología, adaptadas a nuestras necesidades y que permitan seguir construyendo el camino para que estemos a la vanguardia”, señaló Carlos Zenteno, presidente de Claro Colombia.
-                            <br>
-                            Pese a todo esto, para que Colombia cuente con un despliegue amplio de esta red falta tiempo. Hasta el momento, el Mintic no ha puesto una fecha para una posible subasta del espectro 5G.
-                            <br>
-                            Aun así, en octubre pasado, el alto consejero presidencial para la Transformación Digital, Víctor Muñoz, mencionó la posibilidad de que para finales del 2021 se pueda considerar realizar una subasta, para que estas redes estén en funcionamiento para finales de 2022 y principios de 2023.
-                        </p>
+                     <div class="img quinta" >
+                        <img src="img/imagen-arte-5.jpg" alt="hiperrealismo" width="" height=""><br>
+                        <div class="pie-de-foto2"> <strong>Foto: Cortesía Diego Facio</strong></div>
+                        <div class="pie-de-foto1">Diego Facio, cuyo nombre artístico es Digo Koi 
+                            y su fascinación por las miradas hiperrealistas.
+                        </div>
+                    </div>
+                    <p>
+                        Vamos otra vez a Italia para encontrar a 
+                        Este increíble artista italiano<strong> empezó haciendo tatuajes</strong> y como la mayoría de los grandes 
+                        nombres que te enseño<strong> procede de una formación autodidacta lo que le ha permitido elaborar un 
+                        estilo propio.</strong><br>
+                        De hacer tatuajes a realizar dibujos hiperrealistas
+                        Como te decía antes Diego Koi empezó haciendo tatuajes de estilo japonés pero poco a poco se fue dejando 
+                        seducir por la sutileza del dibujo realista.<br>
+                        <strong> Terminó sustituyendo los trazos gruesos del tatuaje por las líneas finas y delicados sombreados 
+                        del hiperrealismo</strong> y se convirtió en una de las referencias entre los artistas hiperrealistas.<br>
+                    </p>
+                        <div class="img sexta" >
+                        <img src="img/imagen-arte-6.jpg" alt="hiperrealismo" width="" height=""><br>
+                        <div class="pie-de-foto2"> <strong>Foto: Cortesía Kelvin Okafor</strong></div>
+                        <div class="pie-de-foto1">Esculpiendo el papel Y por último pero no menos importante 
+                            te dejo con Kelvin Okaford.
+                        </div>
+                    </div>
+                    <p>
+                        Éste<strong> británico me dejó con la boca abierta cuando vi sus obras hiperrealistas por 
+                        primera vez</strong> y además hay numerosos vídeos y pasos a pasos en internet de cómo ha ido 
+                        haciendo sus cuadros lo cual siempre es interesante y de agradecer.<br>
+                        <strong> Okafor trabaja con escultura, vidrio, grabado, pintura y fundición.</strong> Se especializa 
+                        en dibujos de retratos hiperrealistas de gente común y celebridades.<br> Su trabajo a menudo
+                        se confunde con fotografías debido a su detalle y semejanza con la realidad.<br> Las 
+                        primeras piezas incluyen retratos de Amy Winehouse , la Madre Teresa , Lauryn Hill , 
+                        Jamal , Nelson Mandela , Beyoncé , Daniel Craig , Corinne Bailey Rae , Rihanna y Tinie Tempah. 
+                        <strong> En 2017, Okafor se convirtió en el primer artista negro en exhibirse permanentemente 
+                        en el Cámara de los Comunes con su retrato a lápiz de Bernie Grant .</strong>
+                    </p>
                 </article>
             </section>
             <div class="contenedor-mas-noticias">
                 <h3>Descubre más noticias</h3>
                 <div class="mas-noticias">
                     <div class="noticia noticia1">
-                        <img src="img/google.jpg" alt="google">
-                        <a href="#"><span>Los servicios de Google ya están de vuelta</span></a>
+                        <img src="img/imagen-arte-7.jpg" alt="arte-7">
+                        <a href="#"><span>Bellas Artes dictará talleres artísticos para niños y adultos</span></a>
                     </div>
                     <div class="noticia noticia2">
-                        <img src="img/tutorial_tecnologia.jpg" alt="Tutorial_tecnología">
-                        <a href="#"><span>Claves para no caer en una estafa virtual en esta Navidad</span></a>
+                        <img src="img/imagen-arte-8.jpeg" alt="arte-8">
+                        <a href="#"><span>Ultimas novedades sobre el covid 19</span></a>
                     </div>
                     
                     <div class="noticia noticia3">
-                        <img src="img/google2.jpg" alt="google">
-                         <a href="#"><span>YouTube, Gmail y otros servicios de Google sufren una caída mundial</span></a> 
+                        <img src="img/imagen-arte-9.jpeg" alt="arte-9">
+                         <a href="#"><span>Principales novedades tecnológicas Colombia</span></a> 
                     </div>
                 </div>
                     <h3>Te puede Interesar</h3>
                     <div class="video-aside">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/cKeJNQACXbg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/sSDvqeyy7O8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/4yvZWD6Vby0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>  
                     <div class="opinion">
                         <p>¿Qué te pareció el artículo?</p>
                     </div>
